2009-04-24  Stuart Cassoff <stwo@users.sf.net>

	* unix/Makefile.in:	Removed stray @ from Makefile.in test target.
	[Bug 2764263], Don't chmod+x square demo. [Bug 1945073],
	Adjustable demo install location. [Patch 2764272]

2009-04-24  Stuart Cassoff <stwo@users.sf.net>

	* unix/Makefile.in:	Don't chmod/exec installManPage.
				[Patch 2769530]

2009-04-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinDialog.c (Tk_ChooseDirectoryObjCmd): enable the new
	style choosedir that has a "New Folder" button, with
	::tk::winChooseDirFlags override for new behavior. [Bug 2779910]

2009-04-15  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.7 TAGGED FOR RELEASE ***

	* changes:	Updated for 8.5.7 release.

2009-04-14  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/tcl.m4:	Removed -Wno-implicit-int from CFLAGS_WARNING.

2009-04-10  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updated for 8.5.7 release.

	* generic/tk.h:		Bump to 8.5.7 for release.
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

2009-04-10  Joe English  <jenglish@users.sourceforge.net

	* library/palette.tcl(tk_setPalette): Don't set 
	*selectColor: #b03060; this makes radio- and checkbuttons
	look wrong post-TIP#109.

2009-04-10  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure.in (Darwin):	use Darwin SUSv3 extensions if
					available.
	* unix/configure:		autoconf-2.59
	* unix/tkConfig.h.in:		autoheader-2.59

	* library/msgbox.tcl: don't set msgbox bitmap background on TkAqua.

	* library/demos/filebox.tcl: only show "Motif Style Dialog" checkbutton
	on X11 windowingsystem.

	* library/demos/widget: GOOBE: use ttk::cursor

	* library/ttk/cursors.tcl: backport ttk::cursor from HEAD

	* library/demos/knightstour.tcl: fix knightstour demo not running from
	interactive wish.

	* library/console.tcl (::tk::ConsoleInit): remove redundant TkAqua
	Quit menu item.
